디비에 데이터 저장 성공 , 중복처리 로직 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>upload</title>
 </head>
 <body>
-  <h2>hello Excel</h2>
-
-  <h2>파일 업로드</h2>
+  <h2>엑셀 파일을 업로드 해주세요</h2>
 
   <form action="/upload" method="post" enctype="multipart/form-data">
     <input type="file" name="file" />
