스타일추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>upload</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            padding: 20px;
+        }
+
+        h2 {
+            color: #333;
+            text-align: center;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        input[type="file"] {
+            margin-bottom: 10px;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+        div {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        a {
+            display: block;
+            text-align: center;
+            margin-bottom: 20px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #4CAF50;
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            background-color: #45a049;
+        }
+    </style>
+
 </head>
 <body>
+<div>
+    <a href="/list">리스트로 이동</a>
+</div>
+
   <h2>엑셀 파일을 업로드 해주세요</h2>
 
   <form action="/upload" method="post" enctype="multipart/form-data">
@@ -12,6 +75,8 @@
     <br/>
     <input type="submit" value="업로드" />
   </form>
+
+
 
 </body>
 </html>
