--- a/src/main/resources/templates/duplicate.html
+++ b/src/main/resources/templates/duplicate.html
@@ -98,11 +98,13 @@
     <!-- 건너뛰기 버튼 -->
     <form method="post" action="/duplicate">
       <input type="hidden" name="action" value="skip">
+      <input type="hidden" th:name="duplicates" th:each="duplicate : ${duplicates}" th:value="${duplicate.studentId}"/>
       <button type="submit">건너뛰기</button>
     </form>
 
     <!-- 덮어쓰기 버튼 -->
     <form method="post" action="/duplicate">
+      <input type="hidden" th:name="duplicates" th:each="duplicate : ${duplicates}" th:value="${duplicate.studentId}"/>
       <input type="hidden" name="action" value="overwrite">
       <button type="submit">덮어쓰기</button>
     </form>
